🚨 格式化代码

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,18 +2,15 @@
   "python.languageServer": "None",
   "editor.formatOnSave": true,
   "[python]": {
-    "editor.defaultFormatter": "ms-python.black-formatter",
+    "editor.defaultFormatter": "charliermarsh.ruff",
     "editor.formatOnSave": true,
     "editor.codeActionsOnSave": {
-      "source.organizeImports": "explicit"
+      "source.organizeImports": "explicit",
+      "source.fixAll.ruff": "explicit"
     }
   },
   "python.autoComplete.extraPaths": [
     "${workspaceFolder}/../../../../"
-  ],
-  "isort.args": [
-    "--profile",
-    "black"
   ],
   "basedpyright.analysis.extraPaths": [
     "${workspaceFolder}/../../../"
